--- a/src/main/resources/META-INF/native-image/com.typecv/typecv/resource-config.json
+++ b/src/main/resources/META-INF/native-image/com.typecv/typecv/resource-config.json
@@ -3,6 +3,7 @@
     "includes": [
       {"pattern": "sample_content\\.yaml$"},
       {"pattern": "templates/.*\\.ftl$"},
+      {"pattern": "themes/.*\\.yaml$"},
       {"pattern": "typst/.*"}
     ]
   },
